# Zinc

./: .gitignore  CMakeLists.txt  DataTypes  NBT.nbt  README.md  build.sh  bytebuffer_todo  clear.sh  conanfile.txt  nbt_values  wget-log
.github/workflows/: cmake-multi-platform.yml
example/: banlist.json  zinc.json
example/config/: multizinc.json  security.json  srvctl.json  zinc.json
inc/: ZincArguments.h  ZincConfig.h  ZincConstants.h
inc/keyring/: ZincKeyringPackage.h
inc/loader/: ZincMessengerBridge.h  ZincPluginLoader.h  ZincPluginMetadata.h  ZincServerMessenger.h
inc/loader/plugin/: ZincPluginFS.h
inc/network/: TCPConnection.h  TCPServer.h
inc/network/minecraft/: ZincConnection.h  ZincPacket.h  ZincServer.h
inc/network/minecraft/channels/: BrandChannel.h  Channel.h  DefaultChannels.h
inc/network/srvctl/: SrvCtlConnection.h  SrvCtlServer.h
inc/registry/: DefaultRegistries.h
inc/type/: BitSet.h  ByteBuffer.h  ChatType.h  ChunkData.h  EntityMetadata.h  GameTypes.h  IDSet.h  IDorX.h  Identifier.h  LightData.h  NBT.h  PlayerLocation.h  Recipe.h  RegistryReferences.h  Slot.h  SoundEvent.h  TeleportFlags.h  TextComponent.h  Vector.h  XorY.h
inc/type/component/: DefaultComponents.h
inc/type/gametypes/: Color.h  LightData.h  SoundEvent.h  TeleportFlags.h
inc/type/nbt/: NBTElement.h  NBTElementType.h  NBTSettings.h  NBTTagType.h
inc/type/registry/: IDSet.h  IDorX.h
inc/util/: Logger.h  Memory.h  TCPUtil.h  ZLibUtil.h  ZSTDUtil.h
inc/util/crypto/: AES.h  Base64.h  CRC32.h  MCSHA1.h  RSA.h  Random.h
inc/world/: HypixelSlime.h  MCAnvil.h
src/: ZincArguments.cpp  ZincConfig.cpp  main.cc
src/keyring/: ZincKeyringPackage.cpp
src/loader/: ZincMessengerBridge.cpp  ZincPluginLoader.cpp  ZincServerMessenger.cpp
src/network/: TCPConnection.cpp  TCPServer.cpp
src/network/minecraft/: ZincConnection.cpp  ZincPacket.cpp  ZincServer.cpp
src/network/minecraft/channels/: BrandChannel.cpp  Channel.cpp  DefaultChannel.cpp
src/network/srvctl/: SrvCtlConnection.cpp  SrvCtlServer.cpp
src/registry/: DefaultRegistries.cpp
src/type/: BitSet.cpp  BitSet_test.cc  ByteBuffer.cpp  ByteBuffer_test.cc  ChatType.cpp  GameTypes.cpp  IDSet.cpp  IDorX.cpp  Identifier.cpp  LightData.cpp  NBT.cpp  PlayerLocation.cpp  Recipe.cpp  RegistryReferences.cpp  Slot.cpp  SoundEvent.cpp  TeleportFlags.cpp  TextComponent.cpp  Vector.cpp  XorY.cpp
src/type/gametypes/: Color.cpp  LightData.cpp  SoundEvent.cpp  TeleportFlags.cpp
src/type/nbt/: NBTElement.cpp  NBTElementType.cpp  NBTSettings.cpp  NBTTagType.cpp
src/type/registry/: IDSet.cpp  IDorX.cpp
src/util/: Logger.cpp  Memory.cpp  Security.cpp  TCPUtil.cpp  ZLibUtil.cpp  ZSTDUtil.cpp
src/util/crypto/: AES.cpp  Base64.cpp  CRC32.cpp  MCSHA1.cpp  RSA.cpp  Random.cpp
test/: test_AES.cpp  test_Base64.cpp  test_ByteBuffer.cpp  test_NBT.cpp  test_RSA.cpp  test_ZLibUtil.cpp  test_ZSTDUtil.cpp
zincsdk/include/plugin/: ZincPluginLoaderData.h
zincsdk/src/plugin/: ZincPluginLoaderData.cpp
